grafana/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  backend:
    serviceName: grafana
    servicePort: 3000
